objects/ASI_CRM_JP_Advanced_Search__c.object
<CustomObject>
    <description>For JP CRM3</description>
    <fields>
        <fullName>ASI_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Company_Code__c</fullName>
        <label>Company Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Delivery_Instruction_1__c</fullName>
        <label>Delivery Instruction 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Delivery_Instruction_2__c</fullName>
        <label>Delivery Instruction 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Freight_Code__c</fullName>
        <label>Freight Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_JP_CRM_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Mailing_Name_Katakana__c</fullName>
        <label>Mailing Name (Katakana)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Mailing_Name__c</fullName>
        <label>Mailing Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Route_Code__c</fullName>
        <label>Route Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Ship_To_Customer_Address1__c</fullName>
        <label>Ship To Customer Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Ship_To_Customer_Address2__c</fullName>
        <label>Ship To Customer Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Ship_To_Customer_Address3__c</fullName>
        <label>Ship To Customer Address3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Ship_To_Customer_Number__c</fullName>
        <label>Ship To Customer Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Ship_To_Customer_Phone_No__c</fullName>
        <label>Ship To Customer Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Ship_To_Customer_Salesman_Code__c</fullName>
        <label>Ship To Customer Salesman Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Ship_To_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Advanced Search (Ship To Customer)</relationshipLabel>
        <relationshipName>ASI_JP_CRM_Advanced_Search_ShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Sold_To_Cust_Par_Address__c</fullName>
        <label>Sold To Customer Parent Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Sold_To_Customer_Address1__c</fullName>
        <label>Sold To Customer Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Sold_To_Customer_Address2__c</fullName>
        <label>Sold To Customer Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Sold_To_Customer_Address3__c</fullName>
        <label>Sold To Customer Address3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Sold_To_Customer_Number__c</fullName>
        <label>Sold To Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Sold_To_Customer_Phone_No__c</fullName>
        <label>Sold To Customer Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Sold_To_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Advanced Search (Sold To Customer)</relationshipLabel>
        <relationshipName>ASI_JP_CRM_Advanced_Search_SoldTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Sold_To_Name_Katakana__c</fullName>
        <label>Sold To Name (Katakana)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Sold_To_Name__c</fullName>
        <label>Sold To Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Sub_Wholesaler_Number__c</fullName>
        <label>Sub-Wholesaler Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Sub_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Wholesaler</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Advanced Search (Sub-Wholesaler)</relationshipLabel>
        <relationshipName>ASI_JP_CRM_Advanced_Search_ShipTo_SubWS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Tax_Area__c</fullName>
        <label>Tax Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Advanced Search</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advanced Search</pluralLabel>
    <recordTypes>
        <fullName>ASI_JP_DF_Advanced_Search</fullName>
        <active>true</active>
        <label>ASI JP DF Advanced Search</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_JP_DP_Advanced_Search</fullName>
        <active>true</active>
        <description>For JP CRM3</description>
        <label>ASI JP DP Advanced Search</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>